# orcest

./: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.dashboard.yml  docker-compose.redis.yml  docker-compose.yml  install.sh  plan.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  claude-review.yml  integration.yml
config/: orchestrator.example.yaml  worker.example.yaml
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
dashboard/server/: index.ts  redis.ts  snapshot.ts  stuck.ts  workers.ts
dashboard/src/: App.tsx
docs/plans/: 2026-03-16-fleet-review-fixes.md  phase-1-core-loop.md  phase-2-full-pr-management.md  phase-3-issue-processing.md  phase-4-codebase-improvement.md
provision/: create-orchestrator-vm.sh  create-vm.sh  env.example  env.orchestrator.example  rebake-template.sh  setup-orchestrator.sh  setup-worker.sh
provision/systemd/: orcest-rebake-template.service  orcest-rebake-template.timer  orcest-worker.service
src/orcest/: __init__.py  cli.py  dashboard.py
tests/: conftest.py  test_cli.py  test_dashboard.py  test_smoke.py
tests/fleet/: test_cli.py  test_cloud_init.py  test_config.py  test_inventory.py  test_orchestrator.py  test_orchestrator_deploy.py  test_pool_manager.py  test_provisioner.py  test_proxmox.py  test_proxmox_api.py  test_runner_cloud_init.py
tests/integration/: conftest.py  test_locking.py  test_task_flow.py  test_worker_isolation.py
tests/orchestrator/: test_ci_triage.py  test_deployment.py  test_gh.py  test_issue_ops.py  test_loop.py  test_pr_ops.py  test_task_publisher.py
tests/shared/: test_config.py  test_coordination.py  test_logging.py  test_models.py  test_redis_client.py
tests/stress/: conftest.py  helpers.py  test_concurrent_workers.py
tests/worker/: test_claude_runner.py  test_heartbeat.py  (+3 more)
(+60 files in other folders)
