[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orcest"
version = "0.1.0"
description = "Autonomous CI/CD orchestration system"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
orcest = "orcest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
