[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orcest"
version = "0.1.0"
description = "Autonomous CI/CD orchestration system"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.75",
]

[project.scripts]
orcest = "orcest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-timeout>=2.3",
    "fakeredis[lua]>=2.21",
    "ruff>=0.4",
    "build>=1.0",
    "pip-tools>=7.0",
    "mypy>=1.0",
    "types-PyYAML",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast tests using fakeredis/mocks only",
    "integration: tests requiring real Redis",
    "stress: high-concurrency tests requiring real Redis (slow)",
]
addopts = "--timeout=60"
